# OldNES

./: .gitignore  CMakeLists.txt  main.c
include/: controller.h  cpu.h  cpu_bus.h  cpu_opcodes.h  definitions.h  emulator.h  graphics.h  log.h  mapper.h  memory.h  ppu.h  ppu_bus.h
src/: controller.c  cpu.c  cpu_bus.c  cpu_opcodes.c  emulator.c  graphics.c  log.c  mapper.c  memory.c  ppu.c  ppu_bus.c
